登录验证功能及token生成追加
