# project/demo/openapispecs/files/openapi.yaml
@@ -15,6 +15,8 @@ servers:
 paths:
   /user/{id}:
     $ref: './paths/user/user_by_id.yaml'
+  /user/username:
+    $ref: './paths/user/user_by_username.yaml'
   /user:
     $ref: './paths/user/user.yaml'
 
@@ -46,6 +48,9 @@ components:
       $ref: './components/schemas/user.yaml#/UserCreateModel'
     UserUpdateModel:
       $ref: './components/schemas/user.yaml#/UserUpdateModel'
+
+    Token:
+      $ref: './components/schemas/user.yaml#/Token'
 
   responses:
     # 统一项目定义
@@ -109,6 +114,8 @@ components:
       $ref: './components/parameters/user.yaml#/sex'
     nickname:
       $ref: './components/parameters/user.yaml#/nickname'
+    password:
+      $ref: './components/parameters/user.yaml#/password'
 
   # 统一security的schema的定义
   securitySchemes:
